# videoDetection-v8

./: CMakeLists.txt  colorFeat.cpp  colorFeat.h  invertedIndex.h  main.cpp  nonCopyable.h  video_det_engine.cpp  video_det_engine.h  video_det_param.cpp  video_det_param.h  video_det_utilities.cpp  video_proc_utilities.cpp  video_proc_utilities.h
